# cobweb

./: README.md  com.farthergate.Cobweb.json  meson.build
data/: com.farthergate.Cobweb.desktop.in  com.farthergate.Cobweb.gschema.xml  com.farthergate.Cobweb.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: cobweb.gresource.xml  cobweb.in  main.py  meson.build  window.blp  window.py
